Display breaks on github pages. Removed background to test fix

--- a/battleship.css
+++ b/battleship.css
@@ -28,8 +28,8 @@ td {
 }
 
 body {
-  background-image: url(https://c1.staticflickr.com/1/104/315224821_3bf37dffae_b.jpg);
+  /*background-image: url(https://c1.staticflickr.com/1/104/315224821_3bf37dffae_b.jpg);
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat;*/
 }
